##Text encoding: utf-8

2011-02-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/bonds/bondtool.cc: fix hashes orientation.

2011-02-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gogcpapp.cc: fix an alignment issue.
	* libs/gcp/document.cc: fix alignment with several children
	* libs/gcp/mechanism-step.cc: don't save an empty step.
	* libs/gcp/mechanism-step.h: ditto.
	* libs/gcp/reaction-step.cc: don't create empty steps.
	* libs/gcp/target.cc: remove signals when destroyed.
	* libs/gcp/target.h: ditto.
	* libs/gcu/object.cc: accept unsaved children in Object::SaveChildren().
	* plugins/paint/bonds/bondtool.cc: fixed an item position issue.

2011-02-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment.cc: allow for minus charge in the middel of a string.

2011-02-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: update the view after pasting.
	* libs/gcp/reaction-step.cc: more undo fix in reactions with curved arrows.

2011-02-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-step.cc: don't add new molecules when undoing a
	mechanism arrow deletion. [#32433]

2011-02-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/paint/main.cc: try to save changed files on crashing.
	* programs/paint/standaloneapp.cc: ditto.
	* programs/paint/standaloneapp.h: ditto.

2011-02-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/crystalatom.cc: fix space group detection with dummy atoms.

2011-01-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: fixed merging molecules owned by another object.
	* plugins/paint/cycles/cycletool.cc: never address a deleted string.

2011-01-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-step.cc: don't crash when adding an arrow ouside
	a reaction.
	* plugins/paint/cycles/cycletool.cc: do not add a cycle when not allowed.

2011-01-13  Jean Bréfort  <jean.brefort@normalesup.org>